--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ p{
 #startImage{
     width: 100%;
     background-image: url("/images/hero.jpg");
-    height: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -143,6 +143,11 @@ p{
 
 #startTitle h1 {
     font-size: 4em;
+}
+
+#mainContent{
+    width: 60%;
+    transform: translateX(30%);
 }
 
 #features{
@@ -194,12 +199,14 @@ p{
 .menu_item{
     display: inline-block;
     margin: 10px;
-    width: 30vh;
-    height: 30vh;
+    width: calc(33.33% - 30px);
+    /* height: 30vh; */
+    aspect-ratio: 1;
     border-radius: 4vh;
     background-color: var(--white_transparent);
     overflow: hidden;
     transition: all 0.2s ease-in-out;
+    border-radius: 20%;
 }
 
 /* .menu_item{
@@ -208,9 +215,8 @@ p{
 } */
 
 .menu_item img{
-    width: 30vh;
-    height: 30vh;
-    border-radius: 4vh;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     transition: all 0.2s ease-in-out;
@@ -225,10 +231,78 @@ p{
     padding: 0vh 4vh 0vh 4vh;
 }
 
-@media screen and (max-width :600px) {
-
+footer {
+    height: 50vh;
+    background-color: var(--black);
+    overflow: hidden;
+    color: var(--white);
+    padding: 20px;
 }
 
-@media screen and (max-width :600px) {
+/* footer h1 {
+    font-size: 4em;
+} */
 
+#spinningLogo{
+    position: relative;
+    left: calc(100% - 30vh);
+    bottom: 20vh;
+    aspect-ratio: 1;
+    height: 50vh;
+    animation: spin infinite linear 40s;
+}
+
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+
+@media screen and (max-width :1200px) {
+    #mainContent{
+        width: 80%;
+        transform: translateX(10%);
+    }
+    #features{
+        display: block;
+    }
+
+    #features .small_column,  #features .big_column{
+        display: block;
+        width: 100%;
+    }
+
+    .three_column {
+        width: calc(50% - 2.5px);
+    }
+
+    .three_column:nth-child(4) {
+        width: 100%;
+    }
+
+    .menu_item:hover img{
+        height: 10%;
+    }
+}
+
+@media screen and (max-width :700px) {
+    #mainContent{
+        width: 90%;
+    }
+
+    .menu_item{
+        display: inline-block;
+        margin: 10px;
+        width: calc(50% - 30px);
+        /* height: 30vh; */
+        aspect-ratio: 1;
+        border-radius: 4vh;
+        background-color: var(--white_transparent);
+        overflow: hidden;
+        transition: all 0.2s ease-in-out;
+        border-radius: 20%;
+    }
+
+    .menu_item:hover img, .menu_item img{
+        height: 50%;
+    }
 }
