--- a/style.css
+++ b/style.css
@@ -16,10 +16,7 @@ body {
     font-weight:500;
 }
 
-h1{
-    font-size: 4em;
-    margin-bottom: 10px;
-}
+/* Default font adjustments */
 
 h1{
     font-size: 2em;
@@ -30,9 +27,7 @@ p{
     font-size: 1.3em;
 }
 
-#startlogo{
-    display: none;
-}
+/* Top navigation bar */
 
 #head{
     z-index: 10;
@@ -112,7 +107,11 @@ p{
     text-decoration: none;
 }
 
+/* Shown first */
 
+#startlogo{
+    display: none;
+}
 
 #startImage{
     width: 100%;
@@ -139,6 +138,8 @@ p{
 #startTitle h1 {
     font-size: 4em;
 }
+
+/* Contents */
 
 #mainContent{
     width: 60%;
@@ -208,11 +209,6 @@ p{
     border-radius: 20%;
 }
 
-/* .menu_item{
-    height: 40vh;
-    overflow: hidden;
-} */
-
 .menu_item img{
     width: 100%;
     height: 100%;
@@ -230,6 +226,8 @@ p{
     padding: 0vh 4vh 0vh 4vh;
 }
 
+/* Footer */
+
 footer {
     height: 50vh;
     background-color: var(--black);
@@ -237,10 +235,6 @@ footer {
     color: var(--white);
     padding: 20px;
 }
-
-/* footer h1 {
-    font-size: 4em;
-} */
 
 #spinningLogo{
     position: relative;
@@ -251,10 +245,14 @@ footer {
     animation: spin infinite linear 40s;
 }
 
+/* Animations */
+
 @keyframes spin {
     from {transform:rotate(0deg);}
     to {transform:rotate(360deg);}
 }
+
+/* Mediaquery */
 
 @media screen and (max-width :1200px) {
     #mainContent{
